# cxxide

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO.md
cmake_editor/: .cproject  .project  argparser.cpp  argparser.h  cmake_editor.cpp  listfile.cpp  listfile.h  listparser.cpp  listparser.h
ex/: CMakeLists.txt  Indexer.cpp  README.md  ci_token_lexer.cpp  ded.cpp  frame.cpp  git_basic.cpp  hash_image.cpp  libclang_basic.cpp  signal.h  simple.cpp  simple.h  stdlib-c++03.cpp  stdlib-c++11.cpp  stdlib-c11.c  stdlib-c89.c  stdlib-c99.c  timers.cpp  ui_test.cpp  xaw_basic.cpp  xcb.cpp  xcb_basic.cpp  xft_basic.cpp
example/: CMakeLists.txt
lib/: CMakeLists.txt
lib/cairo++/: CMakeLists.txt  cairowindow.cpp  cairowindow.h  colour.h  drawing.cpp  drawstate.h  stack.h
lib/cairo++/include/: cairowindow.h  draw_fn.h  drawing.h  drawstate.h  scopedcontext.h  stack.h
lib/cairo++/src/: CMakeLists.txt  cairowindow.cpp  colour.cpp
lib/clang++/include/: clang++.h
lib/clang++/src/: CMakeLists.txt  clang++.cpp
lib/cmakep/: CMakeLists.txt  listparser.cpp  listparser.h
lib/ex/include/: buffer.h  cursor.h  ex.h
lib/ex/src/: CMakeLists.txt  buffer.cpp  cursor.cpp  ex.cpp
lib/pango++/include/: context.h  layout.h
lib/pango++/src/: CMakeLists.txt  context.cpp  layout.cpp
lib/template/: CMakeLists.txt  template.cpp  template.h
lib/x11++/: display.cpp  display.h  events.h  keysym.cpp  keysym.h  point.h  rectangle.h  window.cpp  window.h
lib/x11++/include/: display.h  events.h  window.h
lib/x11++/src/: CMakeLists.txt  display.cpp  window.cpp
lib/xcb++/: xcb++.h
project/: .cproject  .project
project/project/cmake/: item.cpp  item.h  listfile.cpp  listfile.h
src/: CMakeLists.txt  cmake.cpp  cmake.h  exec.cpp  exec.h  git.cpp  git.h  idecore.cpp  idecore.h  listparser.cpp  microide.cpp  project.cpp  project.h  test.cpp
src/cmake/: CMakeLists.txt  cmake.cpp  cmake.h  listparser.cpp  listparser.h  listreader.cpp  listreader.h  listwriter.cpp  listwriter.h
src/git/: CMakeLists.txt
src/idecore/: CMakeLists.txt  idecore.h
src/idecore/cmake/: CMakeLists.txt  cmake.h  cmake_project.cpp  listreader.cpp  listreader.h  listwriter.h
src/idecore/include/: idecore.h
src/idecore/include/cmake/: cmake.h  cmake_project.h
src/idecore/include/git/: git.h
src/idecore/include/system/: exec.h
src/idecore/source/: CMakeLists.txt  source.cpp
src/idecore/src/: CMakeLists.txt  idecore.cpp
src/idecore/src/cmake/: CMakeLists.txt  cmake.cpp  cmake_project.cpp  listreader.cpp  listreader.h  listwriter.cpp  listwriter.h  priv.h
src/idecore/src/git/: CMakeLists.txt  git.cpp
src/idecore/src/source/: cxx_gen.h  license.cpp  source.cpp
src/idecore/src/system/: exec.cpp
src/idecore/system/: CMakeLists.txt  exec.cpp
src/microide/: CMakeLists.txt  microide.cpp
src/source/: CMakeLists.txt  cxx_gen.cpp  cxx_gen.h  license.cpp  license.h  source.h
test/: CMakeLists.txt  test_license.cpp
ui/: .cproject  .project  README.md
ui/ui/: make_unique.h  point.h  rectangle.h  window.cpp  window.h
ui/ui/cairo/: cairo_fwd.h  cairowindow.cpp  cairowindow.h  colour.cpp  colour.h  draw_fn.h  drawing.cpp  drawing.h  drawstate.h  scopedcontext.h  stack.h
ui/ui/pango/: context.cpp  context.h
ui/ui/x11/: display.cpp  display.h  events.h  keysym.cpp  keysym.h  window.cpp  window.h
ui_test/: .cproject  .project  README.md  ui_test.cpp
