CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(cxxide)

ENABLE_TESTING()
IF(NOT TARGET check)
	ADD_CUSTOM_TARGET(check COMMAND ${CMAKE_CTEST_COMMAND})
ENDIF()

IF(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(/usr/lib/llvm-3.4/include/ /home/nicholas/dev/llvm/tools/clang/include/)
LINK_DIRECTORIES(/usr/lib/llvm-3.4/lib/ /home/nicholas/dev/llvm-build/lib/)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(ex)
