CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(example)

#Project wide (top level CMakeLists.txt before ADD_SUBDIRECTORY)
#find_package(Foo)


#Source folder (incl top level)
#DEFINES (-DBLAH)
#INCLUDES (/usr/local/include/)
#COMPILE FLAGS (-Wall -Wextra -fPIC STANDARD c++98 c++03 c++11 c89 c99 c11)
#configure_file
#add_subdirectory

#Target
#SOURCES
#DEFINES (-DBLAH)
#INCLUDES (/usr/local/include/)
#COMPILE FLAGS (-Wall -Wextra -fPIC STANDARD c++98 c++03 c++11 c89 c99 c11)
#LIBRARIES
#LIBRARY SEARCH PATHS
#LINK FLAGS
#CTTargetAddPackageDependencies(TARGETS <name> PACKAGES OpenGL Boost)
#https://github.com/nickhutchinson/cmake-toolkit


#Source file
#DEFINES (-DBLAH)
#COMPILE FLAGS (-Wall -Wextra -fPIC STANDARD c++98 c++03 c++11 c89 c99 c11)


