
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

MACRO(DO_TEST testname)
	ADD_EXECUTABLE(${testname} EXCLUDE_FROM_ALL "${testname}.cpp")
	TARGET_LINK_LIBRARIES(${testname} cxxide)
	SET_TARGET_PROPERTIES(${testname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	ADD_TEST(${testname} "${MAKE_CURRENT_BINARY_DIR}/${testname}")
	ADD_DEPENDENCIES(check ${testname})
ENDMACRO()

FOREACH(test 
#null
)
	DO_TEST(${test})
ENDFOREACH()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/idecore/include ${PROJECT_SOURCE_DIR}/src/idecore/src/source)
ADD_EXECUTABLE(test_license EXCLUDE_FROM_ALL "test_license.cpp")
TARGET_LINK_LIBRARIES(test_license source)
SET_TARGET_PROPERTIES(test_license PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
ADD_TEST(test_license "${MAKE_CURRENT_BINARY_DIR}/test_license")
ADD_DEPENDENCIES(check test_license)

