
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11")

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(CAIRO REQUIRED cairo)

INCLUDE_DIRECTORIES(${CAIRO_INCLUDE_DIRS})

ADD_LIBRARY(cairo++ STATIC cairowindow.cpp colour.cpp drawing.cpp)
TARGET_LINK_LIBRARIES(cairo++ ${X11_LIBRARIES} x11++ ${CAIRO_LDFLAGS})

